# 07_so_long

./: CMakeLists.txt  Makefile  README.md  so_long.c  so_long.h
damir/: collect.xpm  door.xpm  grass.xpm  player.xpm  wall.xpm
ft_get_next_line/: Makefile  get_next_line.c  get_next_line.h  get_next_line_utils.c
ft_libft/: Makefile
game_assets/: back.xpm  back_tile.xpm  blue_crystal_0001.xpm  blue_crystal_0002.xpm  blue_crystal_0003.xpm  exit.xpm  player1.xpm  player2.xpm  player3.xpm  wall.xpm
maps/: map1.ber  map2.ber
minilibx_macos/: mlx_new_image.m  mlx_new_window.m  mlx_xpm.c
src_so_long/: ft_check_map.c  ft_error.c  ft_get_next_line.c  ft_map_func1.c  ft_moves1.c  ft_player_actions.c  ft_push_sprites.c  ft_utils.c
src_so_long_bonus/: ft_animation_bonus.c  ft_error_bonus.c  ft_map_func1_bonus.c  ft_moves1_bonus.c  ft_push_sprites_bonus.c
